<resources>
    <string name="app_name">Shingo Events</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_display_name">Display Name (Optional)</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_submit">Submit</string>
    <string name="error_mismatch_password">Passwords don\'t match!</string>
    <string name="error_account_exists">This email already belongs to an account!</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="action_connect">Connect</string>
    <string name="title_attendee_list">Attendees</string>
    <string name="title_attendee_detail">Attendee Detail</string>
    <string name="prompt_title">Title (Optional)</string>
    <string name="prompt_company">Company (Optional)</string>
    <string name="title_connection_list">Connections</string>
    <string name="title_connection_detail">Connection Detail</string>
    <string name="title_approve">Approve/Deny Connection</string>
    <string name="approve_message">Would you like to connect to</string>
    <string name="search_title">Search</string>
    <string name="title_session_list">Sessions</string>
    <string name="title_session_detail">Session Detail</string>
    <string name="title_speaker_list">Speakers</string>
    <string name="title_speaker_detail">Speaker Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_events">Events</string>
    <string name="action_model">Shingo Model</string>
    <string name="action_newsletter">Newsletter</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="title_agenda_list">Agendas</string>
    <string name="title_agenda_detail">Agenda Detail</string>
    <string name="title_abstract">Abstract</string>
    <string name="title_room">Location</string>
    <string name="title_activity_maps">City Map</string>
    <string name="title_affiliate_list">Affiliates</string>
    <string name="title_affiliate_detail">Affiliate Detail</string>
    <string name="title_exhibitor_list">Exhibitors</string>
    <string name="title_exhibitor_detail">Exhibitor Detail</string>
    <string name="title_recipient_list">Recipients</string>
    <string name="title_recipient_detail">Recipient Detail</string>
    <string name="title_sponsor_list">Sponsors</string>
    <string name="title_sponsor_detail">Sponsor Detail</string>
    <string name="title_activity_venue_maps">Venue Maps</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="api_dev_url">https://shingo-events.herokuapp.com/api</string>
    <string name="api_prod_url">http://104.131.77.136:5000/api</string>
    <string name="prompt_email_opt">Email (Optional)</string>
    <string name="prompt_description">Description of Bug</string>
    <string name="action_support">Support</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_summary">Summary</string>
    <string name="date_range">%1$s - %2$s</string>
    <string name="comma">%1$s, %2$s</string>
</resources>
