<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context="org.shingo.shingoeventsapp.ui.MainActivity">


    <Button
        android:layout_width="@dimen/button_wh"
        android:layout_height="@dimen/button_wh"
        android:text="@string/action_events"
        android:background="@color/colorPrimary"
        android:id="@+id/action_events"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:layout_margin="@dimen/fab_margin"/>

    <Button
        android:layout_width="@dimen/button_wh"
        android:layout_height="@dimen/button_wh"
        android:text="@string/action_model"
        android:background="@color/colorPrimary"
        android:id="@+id/action_model"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textColor="#FFFFFF"
        android:layout_margin="@dimen/fab_margin" />

    <Button
        android:layout_width="@dimen/button_wh"
        android:layout_height="@dimen/button_wh"
        android:text="@string/action_newsletter"
        android:background="@color/colorPrimary"
        android:id="@+id/action_newsletter"
        android:layout_below="@+id/action_events"
        android:textColor="#FFFFFF"
        android:layout_margin="@dimen/fab_margin" />
</RelativeLayout>
