<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/support_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.shingo.shingoeventsapp.ui.SupportActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:ms_multiline="false"
            app:ms_hint="Type"
            app:ms_alignLabels="false"/>

        <android.support.design.widget.TextInputLayout android:id="@+id/email_container" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:visibility="invisible" >

            <EditText android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email_opt"
                android:inputType="textEmailAddress"
                android:maxLines="1" android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:id="@+id/description_container" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:visibility="invisible" >

            <EditText android:id="@+id/comment" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_description"
                android:inputType="textMultiLine" android:lines="10" android:gravity="left|top"
                android:maxLines="10" android:background="#00000000" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:gravity="center">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/action_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_cancel"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:layout_margin="@dimen/fab_margin"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/action_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_submit"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:layout_margin="@dimen/fab_margin"/>
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>