<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/session_name" android:textSize="14pt"
        style="?android:attr/textAppearanceLarge" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:padding="16dp" android:textIsSelectable="true"
        tools:context=".ui.events.SessionDetailFragment" />
    <TextView android:text="@string/title_room"
        style="?android:attr/textAppearanceLarge" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:padding="16dp" android:textIsSelectable="true"
        tools:context=".ui.events.SessionDetailFragment" />
    <ImageView
        android:layout_gravity="center_horizontal"
        android:paddingTop="10px"
        android:paddingBottom="5px"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:src="@android:drawable/divider_horizontal_bright" />
    <TextView android:id="@+id/session_room" style="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:padding="16dp" android:textIsSelectable="true"
        tools:context=".ui.events.SessionDetailFragment" />
    <TextView android:text="@string/title_abstract"
        style="?android:attr/textAppearanceLarge" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:padding="16dp" android:textIsSelectable="true"
        tools:context=".ui.events.SessionDetailFragment" />
    <ImageView
        android:layout_gravity="center_horizontal"
        android:paddingTop="10px"
        android:paddingBottom="5px"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:src="@android:drawable/divider_horizontal_bright" />
    <TextView android:id="@+id/session_abstract"
        style="?android:attr/textAppearanceMedium" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:padding="16dp" android:textIsSelectable="true"
        tools:context=".ui.events.SessionDetailFragment" />
    <ImageView
        android:layout_gravity="center_horizontal"
        android:paddingTop="10px"
        android:paddingBottom="5px"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:src="@android:drawable/divider_horizontal_bright" />
    <TextView android:text="@string/title_speaker_list"
        style="?android:attr/textAppearanceLarge" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:padding="16dp" android:textIsSelectable="true"
        tools:context=".ui.events.SessionDetailFragment" />
    <LinearLayout android:id="@+id/session_speakers"
        android:layout_width="match_parent" android:layout_margin="@dimen/fab_margin"
        android:layout_height="wrap_content" android:orientation="vertical"
        tools:context=".ui.events.SessionDetailFragment" />
</LinearLayout>